--- a/irata/CMakeLists.txt
+++ b/irata/CMakeLists.txt
@@ -7,15 +7,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 option(IRATA_ENABLE_COVERAGE "Enable coverage instrumentation" OFF)
+option(IRATA_ENABLE_SANITIZER "Enable ASAN" OFF)
 
 # ---- Fetch GoogleTest ----
 include(FetchContent)
 
 FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/refs/heads/main.zip
-  DOWNLOAD_EXTRACT_TIMESTAMP TRUE
-)
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG v1.17.0
+  )
 
 # Let CMake download and build it
 FetchContent_MakeAvailable(googletest)
