--- a/irata/sim/CMakeLists.txt
+++ b/irata/sim/CMakeLists.txt
@@ -6,10 +6,11 @@ file(GLOB SIM_TESTS CONFIGURE_DEPENDS "test/**/*.cpp")
 # Main library target
 add_library(irata_sim ${SIM_SRC} ${SIM_HEADERS})
 target_include_directories(irata_sim PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+target_link_libraries(irata_sim PUBLIC irata_asm)
 
 # Test executable
 add_executable(sim_tests ${SIM_TESTS})
-target_link_libraries(sim_tests irata_sim gtest gmock gtest_main)
+target_link_libraries(sim_tests irata_sim irata_asm gtest gmock gtest_main)
 
 add_test(NAME SimTests COMMAND sim_tests)
 
