component decl test

--- a/irata/sim/CMakeLists.txt
+++ b/irata/sim/CMakeLists.txt
@@ -6,7 +6,9 @@ target_link_libraries(irata_sim PUBLIC irata_asm irata_common)
 target_link_libraries(irata_sim PRIVATE irata_build_flags)
 
 file(GLOB_RECURSE TEST_SRCS CONFIGURE_DEPENDS "test/*.cpp")
-add_executable(sim_tests ${TEST_SRCS})
+file(GLOB_RECURSE TEST_HDRS CONFIGURE_DEPENDS "test/include/*.hpp")
+add_executable(sim_tests ${TEST_SRCS} ${TEST_HDRS})
+target_include_directories(sim_tests PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/test/include)
 target_link_libraries(sim_tests PUBLIC irata_sim irata_asm irata_common gtest gmock gtest_main)
 target_link_libraries(sim_tests PRIVATE irata_build_flags)
 add_test(NAME sim_tests COMMAND sim_tests)
