Irata component - running programs, passing verification.

--- a/irata/asm/asm.yaml
+++ b/irata/asm/asm.yaml
@@ -1,4 +1,8 @@
 instructions:
+  - name: HLT
+    opcode: 0x00
+    addressing_mode: none
+    description: Halt the CPU
   - name: LDA
     opcode: 0xA9
     addressing_mode: immediate
