add crash and nop instructions

--- a/irata/asm/asm.yaml
+++ b/irata/asm/asm.yaml
@@ -3,6 +3,14 @@ instructions:
     opcode: 0x00
     addressing_mode: none
     description: Halt the CPU
+  - name: CRS
+    opcode: 0x01
+    addressing_mode: none
+    description: Crash the CPU
+  - name: NOP
+    opcode: 0x02
+    addressing_mode: none
+    description: No operation
   - name: LDA
     opcode: 0xA9
     addressing_mode: immediate
