--- a/irata/asm/asm.yaml
+++ b/irata/asm/asm.yaml
@@ -16,7 +16,10 @@ instructions:
     addressing_mode: immediate
     description: Load accumulator from constant
   - name: LDA
-    opcode: 0xAA
+    opcode: 0xAD
     addressing_mode: absolute
     description: Load accumulator from memory
-
+  - name: CMP
+    opcode: 0xC9
+    addressing_mode: immediate
+    description: Compare accumulator with constant
