Implement JNE and JMP, and use CMP and JNE to implement an end-to-end asm test for loading a value to A and checking its value.

--- a/irata/Makefile
+++ b/irata/Makefile
@@ -9,35 +9,10 @@ build: configure
 	cmake --build build
 
 test: build
-	for test in $$(find ./build -type f -executable -name '*test*'); do $$test || exit 1; done
+	ctest --test-dir build --output-on-failure
 				
 format: configure
 	find sim \( -name '*.cpp' -o -name '*.hpp' \) -exec clang-format -i {} +
 
 clean:
 	rm -rf build
-
-tidy: format
-	find sim -name '*.cpp' | xargs -I{} clang-tidy {} -- -Isim/include -Iextern/googletest/googlemock/include/ -Iextern/googletest/googletest/include/
-
-coverage:
-	cmake -S . -B build -DIRATA_ENABLE_COVERAGE=ON -DIRATA_ENABLE_SANITIZER=ON
-	cmake --build build
-	LLVM_PROFILE_FILE="build/irata.profraw" ./build/sim/sim_tests
-	@llvm-profdata merge -sparse build/irata.profraw -o build/irata.profdata
-	@llvm-cov show ./build/sim/sim_tests -instr-profile=build/irata.profdata \
-		-ignore-filename-regex='(gtest|gmock|_deps)' -format=text -Xdemangler=c++filt | awk '\
-	/^[\\/].*\\.(cpp|cc|hpp|h):$$/ { \
-	  file = $$0; \
-	  has_output = 0; \
-	  next; \
-	} \
-	/^[[:space:]]*[0-9]+[|][[:space:]]*0[|]/ { \
-	  if (!has_output) { \
-	    print ""; \
-	    print "FILE: " file; \
-	    print "--------------------------"; \
-	    has_output = 1; \
-	  } \
-	  print $$0; \
-	}'
