--- a/irata/asm/asm.yaml
+++ b/irata/asm/asm.yaml
@@ -31,3 +31,7 @@ instructions:
     opcode: 0xD0
     addressing_mode: absolute
     description: Jump to address if not equal
+  - name: JEQ
+    opcode: 0xF0
+    addressing_mode: absolute
+    description: Jump to address if equal
