Implement LDA absolute indexed modes, with microcode implementation, assembler support, and self-hosted tests.

--- a/irata/asm/asm.yaml
+++ b/irata/asm/asm.yaml
@@ -33,6 +33,14 @@ instructions:
     opcode: 0xB9
     addressing_mode: zero_page_y
     description: Load accumulator from zero page memory with Y offset
+  - name: LDA
+    opcode: 0xBD
+    addressing_mode: absolute_x
+    description: Load accumulator from memory with X offset
+  - name: LDA
+    opcode: 0xB1
+    addressing_mode: absolute_y
+    description: Load accumulator from memory with Y offset
   - name: STA
     opcode: 0x8D
     addressing_mode: absolute
